--- a/letter-sort/src/styles.css
+++ b/letter-sort/src/styles.css
@@ -70,7 +70,7 @@ body {
 
 
 
-/* ---------- 5. Etykieta sort the letters ---------- */
+/* ---------- 5. Etykieta sort the letters i etykieta level ---------- */
 .board-title {
     background-color: #e95420;
     color: white;
@@ -80,6 +80,8 @@ body {
     font-size: 1.5rem;
     margin-bottom: 0rem;
 }
+
+.subtitle { text-align:center; margin-top:-0.5rem; color:#004f86; }
 
 
 /* ---------- 6. Kontener dwóch kolumn ---------- */
